--- a/Cars/Base.lproj/Main.storyboard
+++ b/Cars/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uBt-iE-vaN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,7 +20,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Yf0-fs-teO">
                                 <rect key="frame" x="0.0" y="0.0" width="1250" height="600"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="py2-zC-KaQ">
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="py2-zC-KaQ">
                                 <rect key="frame" x="40" y="120" width="240" height="130"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collection" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBM-Pz-qdn">
@@ -66,6 +66,9 @@
                                 <state key="normal" title="Show all Cars">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="zWI-dr-L00" kind="show" id="0iw-9X-CaT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designed by Athic" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kN1-5F-XZ7">
                                 <rect key="frame" x="450" y="558" width="130" height="22"/>
@@ -92,13 +95,188 @@
                             <constraint firstItem="py2-zC-KaQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="pfR-MW-fch"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7vl-BK-Enc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="555" y="548"/>
+            <point key="canvasLocation" x="1129" y="548"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XME-ra-enk">
+            <objects>
+                <viewController storyboardIdentifier="A" id="0ES-q5-1Sy" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="T8I-Uh-ZxC"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gkt-8I-eMF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cdx-rY-kek">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRx-Tx-lll">
+                                <rect key="frame" x="242" y="247" width="46" height="30"/>
+                                <state key="normal" title="A"/>
+                                <connections>
+                                    <segue destination="zWI-dr-L00" kind="show" id="ROm-vQ-0NU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gPE-1g-U6E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="142" y="1239"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Cz5-EB-pTp">
+            <objects>
+                <viewController storyboardIdentifier="B" id="kuG-mW-1O3" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9wA-lX-mc0"/>
+                        <viewControllerLayoutGuide type="bottom" id="vJE-aF-Oej"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XHL-Sg-3FJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6yf-XO-mXP">
+                                <rect key="frame" x="260" y="231" width="46" height="30"/>
+                                <state key="normal" title="B"/>
+                                <connections>
+                                    <segue destination="zWI-dr-L00" kind="show" id="sdv-Nz-TiZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bnQ-kt-cpE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="751" y="1239"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PB2-Nu-gCQ">
+            <objects>
+                <viewController storyboardIdentifier="C" id="Kyu-vW-7r8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gqA-gK-q5H"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZEm-QE-Rsk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Tie-GN-nlK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="prs-An-DR7">
+                                <rect key="frame" x="287" y="233" width="46" height="30"/>
+                                <state key="normal" title="C"/>
+                                <connections>
+                                    <segue destination="zWI-dr-L00" kind="show" id="7LS-y4-rQg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O2Z-rn-KRz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1359" y="1239"/>
+        </scene>
+        <!--SecondVC-->
+        <scene sceneID="dsB-O4-2Vb">
+            <objects>
+                <viewController id="zWI-dr-L00" customClass="SecondVC" customModule="Cars" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7vu-7e-aq1"/>
+                        <viewControllerLayoutGuide type="bottom" id="tC1-Ak-PD9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QVl-vW-6OA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YjL-cf-gdP">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KCg-Ai-e13" customClass="CustomButton" customModule="Cars" customModuleProvider="target">
+                                        <rect key="frame" x="30" y="25" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="MAz-AC-Mdi"/>
+                                            <constraint firstAttribute="height" constant="30" id="cv6-xl-9sf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="uBt-iE-vaN" kind="show" id="w2e-Lx-H2Q"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="KCg-Ai-e13" firstAttribute="top" secondItem="YjL-cf-gdP" secondAttribute="top" constant="25" id="XEX-dL-4jq"/>
+                                    <constraint firstItem="KCg-Ai-e13" firstAttribute="leading" secondItem="YjL-cf-gdP" secondAttribute="leading" constant="30" id="bfC-Jq-HI9"/>
+                                    <constraint firstAttribute="height" constant="80" id="ju0-nz-dCz"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K7g-d6-F13">
+                                <rect key="frame" x="0.0" y="80" width="600" height="520"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="60" id="IBW-Hf-R9c">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IBW-Hf-R9c" id="poy-hi-sNk">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YjL-cf-gdP" secondAttribute="trailing" id="0nA-vg-fJn"/>
+                            <constraint firstItem="K7g-d6-F13" firstAttribute="leading" secondItem="QVl-vW-6OA" secondAttribute="leading" id="3n2-kK-dBx"/>
+                            <constraint firstItem="tC1-Ak-PD9" firstAttribute="top" secondItem="K7g-d6-F13" secondAttribute="bottom" id="ATR-YO-e2J"/>
+                            <constraint firstItem="K7g-d6-F13" firstAttribute="top" secondItem="YjL-cf-gdP" secondAttribute="bottom" id="D5W-hG-3OB"/>
+                            <constraint firstAttribute="trailing" secondItem="K7g-d6-F13" secondAttribute="trailing" id="Udb-6I-gSn"/>
+                            <constraint firstItem="YjL-cf-gdP" firstAttribute="leading" secondItem="QVl-vW-6OA" secondAttribute="leading" id="fDf-pi-8s8"/>
+                            <constraint firstItem="YjL-cf-gdP" firstAttribute="top" secondItem="QVl-vW-6OA" secondAttribute="top" id="nE2-r3-Jl9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="K7g-d6-F13" id="tcM-rV-J2u"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nfF-E8-0wZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1745" y="548"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Aeq-zb-CTO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uBt-iE-vaN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sfs-6O-de5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="KPw-RP-CmC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bWE-cj-R5q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="505" y="548"/>
         </scene>
     </scenes>
     <resources>
         <image name="carsBackground" width="1920" height="1080"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="7LS-y4-rQg"/>
+    </inferredMetricsTieBreakers>
 </document>
